2005-06-06  Francois Marier  <francois@serioushack.com>

	* src/shaders, src/HDRImages: Remove ShUnclamped.
	Change AttribNf textures to AttribNfub.
	Specify the value type when constructing host memory.

2005-05-09  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* configure.ac (GL_CHECK_GL_HEADERS): Include the GL
	libraries. OS X build works now, but I get run-time OpenGL
	errors. Sigh.

	* config/gl.m4: Updated from latest Sh version.

	* Everywhere OpenGL headers are included use the appropriate path
	on OS X.

	* bootstrap: Replace with latest bootstrap from Sh. This includes
	lots of fixes for OS X.

2005-05-08  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/Makefile.am (*_CPPFLAGS): Use -I$(srcdir)/HDRImages instead
	of -IHDRImages in order to allow out-of-source building.

2005-04-25  Francois Marier  <francois@serioushack.com>
	
	* src/utilimpl.hpp: Remove this file and move its content to the
	core library.

	* src/shaders/Checkerboard.cpp, JeweledShader.cpp: Replace "sstep"
	with "smoothstep" since this function has been moved to the core.
	
	* src/shaders/VectorText.cpp, NoiseShader.cpp: Replace
	"smoothstep" with "deprecated_smoothstep" since these shaders
	appears to be using a cubic smoothstep function whereas the
	"smoothstep" function defined in the book is linear.

2005-03-04  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeApp.cpp (ShrikeApp): Added an optional argument
	specifying the backend to use.

	* src/shaders/EdgeGooch.cpp: Use ShProgramSets.

	* src/Shader.cpp: Use an ShProgramSet to bind.

	* src/ShrikeCanvas.cpp: Use ShProgramSets, and shUnbind().

	* src/Camera.cpp (Camera): Use a far plane that's actually far.

2004-11-28 Bryan Chan  <b8chan@cgl.uwaterloo.ca>

	Undid the typename -> ShValueType changes since trunk uses
	typenames again.
  
2004-11-11 Bryan Chan   <b8chan@cgl.uwaterloo.ca>

	* src/UniformPanel.cpp: Fixed bugs so that non-f uniforms don't
	cause the panel to bomb out.
  